--- a/frontend/src/pages/TransportManagement/VehicleInfo.css
+++ b/frontend/src/pages/TransportManagement/VehicleInfo.css
@@ -11,7 +11,7 @@
     max-height: 400px;
   }
   .vehicle-photo-section>img{
-    /* height: 100%; */
+    height: 100%;
     width: 100%;
   }
   .vehicle-info-section{
